"-destreamtest" key has been added to BreezeD-project to implement Wallet for Destream TestNet

--- a/Sources/Stratis.BreezeD/Properties/launchSettings.json
+++ b/Sources/Stratis.BreezeD/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Bitcoin Main": {
       "commandName": "Project",
-      "commandLineArgs": "stratis -testnet"
+      "commandLineArgs": "-destreamtest"
     },
     "Bitcoin Test": {
       "commandName": "Project",
