"stratis" substituted with "destream" in code

--- a/Sources/DeStream.Bitcoin.Cli/Properties/launchSettings.json
+++ b/Sources/DeStream.Bitcoin.Cli/Properties/launchSettings.json
@@ -2,11 +2,11 @@
   "profiles": {
     "DeStream.CLI DeStream REST API": {
       "commandName": "Project",
-      "commandLineArgs": "stratis Wallet/files"
+      "commandLineArgs": "destream Wallet/files"
     },
     "DeStream.CLI DeStream RPC": {
       "commandName": "Project",
-      "commandLineArgs": "stratis -rpcuser=stratistestuser -rpcpassword=stratistestpass -rpcport=26174 getinfo"
+      "commandLineArgs": "destream -rpcuser=destreamtestuser -rpcpassword=destreamtestpass -rpcport=26174 getinfo"
     },
     "DeStream.CLI Bitcoin RPC": {
       "commandName": "Project",
