--- a/Sources/DeStream.BreezeD/Properties/launchSettings.json
+++ b/Sources/DeStream.BreezeD/Properties/launchSettings.json
@@ -10,11 +10,11 @@
     },
     "DeStream Main": {
       "commandName": "Project",
-      "commandLineArgs": "stratis "
+      "commandLineArgs": "destream "
     },
     "DeStream Test": {
       "commandName": "Project",
-      "commandLineArgs": "stratis -testnet -debug=all -loglevel=debug"
+      "commandLineArgs": "destream -testnet -debug=all -loglevel=debug"
     }
   }
 }
