--- a/Sources/DeStream.DeStreamDnsD/Properties/launchSettings.json
+++ b/Sources/DeStream.DeStreamDnsD/Properties/launchSettings.json
@@ -5,11 +5,11 @@
     },
     "DeStream.DeStreamDnsD Test": {
       "commandName": "Project",
-      "commandLineArgs": "-testnet -dnslistenport=5399 -dnshostname=dns.stratisplatform.com -dnsnameserver=ns1.dns.stratisplatform.com -dnsmailbox=admin@stratisplatform.com"
+      "commandLineArgs": "-testnet -dnslistenport=5399 -dnshostname=dns.destreamplatform.com -dnsnameserver=ns1.dns.destreamplatform.com -dnsmailbox=admin@destreamplatform.com"
     },
     "DeStream.DeStreamDnsD FullNode Test": {
       "commandName": "Project",
-      "commandLineArgs": "-testnet -dnsfullnode -dnslistenport=5399 -dnshostname=dns.stratisplatform.com -dnsnameserver=ns1.dns.stratisplatform.com -dnsmailbox=admin@stratisplatform.com"
+      "commandLineArgs": "-testnet -dnsfullnode -dnslistenport=5399 -dnshostname=dns.destreamplatform.com -dnsnameserver=ns1.dns.destreamplatform.com -dnsmailbox=admin@destreamplatform.com"
     }
   }
 }
