--- a/Sources/DeStream.Bitcoin.Cli/DeStream.Bitcoin.Cli.csproj
+++ b/Sources/DeStream.Bitcoin.Cli/DeStream.Bitcoin.Cli.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>DeStream.Bitcoin.Cli</AssemblyName>
+    <RootNamespace>DeStream.Bitcoin.Cli</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
