--- a/Sources/DeStream.DeStreamD/DeStream.DeStreamD.csproj
+++ b/Sources/DeStream.DeStreamD/DeStream.DeStreamD.csproj
@@ -40,4 +40,10 @@
     <PackageReference Include="NLog.Extensions.Logging" Version="1.0.0-rtm-beta5" />	
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="destream.service">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
