NodeSettings changed to put DeStream instead of Stratis in folder paths.

--- a/Sources/DeStream.DeStreamD/Properties/launchSettings.json
+++ b/Sources/DeStream.DeStreamD/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Stratis.StratisD": {
       "commandName": "Project",
-      "commandLineArgs": "-testnet -addnode 127.0.0.1"
+      "commandLineArgs": "-testnet -debug -loglevel=trace"
     },
     "Stratis.StratisD Test": {
       "commandName": "Project",
