--- a/Sources/DeStream.DeStreamD/DeStream.DeStreamD.csproj
+++ b/Sources/DeStream.DeStreamD/DeStream.DeStreamD.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1" />
     <PackageReference Include="NLog" Version="4.5.6" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.0.0" />
+    <PackageReference Include="NUnit.Runners" Version="3.8.0" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
 
