The research of the problem of the lack of connection with the wallet "Electrum"

--- a/Sources/Stratis.StratisD/Properties/launchSettings.json
+++ b/Sources/Stratis.StratisD/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "Stratis.StratisD": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "-testnode"
     },
     "Stratis.StratisD Test": {
       "commandName": "Project",
