--- a/Sources/DeStream.DeStreamD/Properties/launchSettings.json
+++ b/Sources/DeStream.DeStreamD/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Stratis.StratisD": {
       "commandName": "Project",
-      "commandLineArgs": "-testnet -debug -loglevel=trace"
+      "commandLineArgs": "-testnet -debug -loglevel=trace -addnode=192.168.31.142:56849"
     },
     "Stratis.StratisD Test": {
       "commandName": "Project",
