Code review fixes have been introduced for genesis-block generation routine Some solution tuning performed

--- a/Sources/DeStream.DeStreamD/Properties/launchSettings.json
+++ b/Sources/DeStream.DeStreamD/Properties/launchSettings.json
@@ -1,8 +1,14 @@
 {
   "profiles": {
-    "Stratis.StratisD": {
+    "DeStream.DeStream": {
+      "commandName": "Project"
+    },
+    "DeStream.DeStreamD Test": {
       "commandName": "Project",
-      "commandLineArgs": "-testnet -debug -loglevel=trace "
+      "commandLineArgs": "-testnet -debug -loglevel=trace"
+    },
+    "Stratis.StratisD": {
+      "commandName": "Project"
     },
     "Stratis.StratisD Test": {
       "commandName": "Project",
