--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,9 @@ ModelManifest.xml
 /Sources/Stratis.Bitcoin.Tests/Stratis.Bitcoin.Tests/TestData
 /Sources/Stratis.StratisD/Logs
 /Sources/Stratis.BitcoinD/Logs 
+
+# Sonarqube
+.sonarqube/
+
+# IDEA
+.idea/
