--- a/Sources/Stratis.Bitcoin.Tests.Wallet.Common/Stratis.Bitcoin.Tests.Wallet.Common.csproj
+++ b/Sources/Stratis.Bitcoin.Tests.Wallet.Common/Stratis.Bitcoin.Tests.Wallet.Common.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RuntimeFrameworkVersion>2.1.1</RuntimeFrameworkVersion>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Stratis.Bitcoin.Features.Wallet\Stratis.Bitcoin.Features.Wallet.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+  </ItemGroup>
 </Project>
